--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,10 @@
-@import "bootstrap/dist/css/bootstrap.min.css";
-
-body{
+#excuseDiv {
+    width: 100%;
     background: white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
